getFirst() - getLast()